2007-05-24  Albert Chu <chu11@llnl.gov>
	
	* ipmipower/: Begin work on sun20 workaround.

	* ipmiconsole/: Begin work on sun 2.0 workarounds.

2007-05-23  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Add 'endianbug' workaround for Sun machines.

	* common/src/ipmi-sdr-cache.c (_get_sdr_sensor_record): Fix SDR
	reservation bugs.

	* common/src/ipmi-sdr-cache.c
	(_get_sdr_generic_device_locator_record): Fix channel_number
	reading bug.

2007-05-22  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-hostrange.txt: Fix some typos.
	
2007-05-21  Albert Chu <chu11@llnl.gov>

	* pef-config/src/pef-config-sections.c
	(pef_config_sections_list_create): Re-order sections.

	* pef-config/: Various minor bug fixes.

	* libfreeipmi/src/ipmi-pef-and-alerting-cmds.c
	(tmpl_cmd_set_pef_configuration_alert_policy_table_rq,
	fill_cmd_set_pef_configuration_parameter_alert_policy_table): Fix
	fill bugs.

2007-05-20  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-coding.txt: Update.

	* pef-config/src/pef-config-alert-policy-table.c
	(pef_config_alert_policy_table_section_get): Add lan channel
	number to help for channel number.

	* pef-config/src/pef-config-alert-policy-table.c: Fix diff
	callback bugs.

	* REDESIGN: Add notes for future.

	* pef-config/: Add Alert String support.

2007-05-19  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-coding.txt: Talk about bmc-config and ipmi-pef
	design considerations.

	* ipmi-pef/src/ipmi-pef-event-filter-table.c: Major code cleanup.

	* ipmi-pef/ipmi-pef.8.pre.in: Updated appropriately.

	* pef-config/: Converted from ipmi-pef.  Update all build files
	and docs appropriately.

	* pef-config/src/pef-config-sections.c
	(pef_config_sections_list_create): Fix alert policy table bug.
	
2007-05-18  Albert Chu <chu11@llnl.gov>

	* ipmi-pef/: Fix incorrect naming of "policy number" for "entry
	number" globally.

	* ipmi-pef/src/ipmi-pef-alert-destination.c,
	ipmi-pef/src/ipmi-pef-alert-destination.h: Renamed to 